
    declare f as function (x as non-empty array 2 of integer) returning void

** Function returing `typedef` of `volatile`
Functions returning a `typedef` of `volatile` are now correctly warned about in
C++20 and later:

    c++decl> using vint = volatile int
    c++decl> explain vint f()
    9: warning: "volatile" return types are deprecated since C++20
    declare f as function returning vint

** Unsupported `set` options
When printing all `set` options in response to the `set` command, **cdecl** now
also prints `(Not supported ....)` next to options that are not supported in
the current language.


* Changes in Cdecl 14.3

** `*` and `-`
For the `explicit-ecsu`, `explicit-int`, and `west-pointer` options, `*` is a
synonym for "all" and `-` is a synonym for "none" but only when they're by
themselves.

** Arrays with named sizes
Arrays can now have names to denote their size, e.g.:

    cdecl> explain int a[N]
    declare a as array N of integer

When such an array is a function parameter, **cdecl** now knows it's a VLA:

    cdecl> explain void f( int n, int a[n] )
    declare f as function (n as integer, a as variable length array n of integer) returning void

** Autocompleting `precision`
`precision` is now autocompleted following `double` in pseudo-English.

** Autocompleting `returning` for lambdas
`returning` was added to the set of next autocompletable keywords for `lambda`.

** Ding on no command match
When no command is matched at all for autocompletion, we now ring the bell.

** Improved "declaration expected" error message
For declarations like:

    cdecl> explain int float

**cdecl** now mentions that "float" is a keyword in error messages.


* Changes in Cdecl 14.2

** Autocompletion `=`
Autocompleting `set` options that take a value now includes `=`.

** `-I` changed to `-i`
The `-I` option (`--explicit-int`) has been changed to `-i`.

** `-R` changed to `-r`
The `-R` option (`--trailing-return`) has been changed to `-r`.

** "West" pointer types