@@ -1,3 +1,3 @@
 declare f as const non-member function
         ^
-9: error: non-member function can not be const
+9: error: non-member functions can not be const
