@@ -1,0 +1,3 @@
+declare f as extern member function
+        ^
+9: error: member functions can not be extern
