@@ -1,0 +1,4 @@
+EXPECTED_EXIT=65
+cdecl -xc++ <<END
+declare f as extern member function
+END
