@@ -58,6 +58,9 @@ C++20 and later:
     9: warning: "volatile" return types are deprecated since C++20
     declare f as function returning vint
 
+** Member functions with linkage
+Now flagging member functions with user-specified linkage as an error.
+
 ** Unsupported `set` options
 When printing all `set` options in response to the `set` command, **cdecl** now
 also prints `(Not supported ....)` next to options that are not supported in
